Fixed blurry thumbnails.

--- a/style.css
+++ b/style.css
@@ -413,6 +413,7 @@ body {
 }
 
 .gallery-video iframe {
+    min-width: 321px;
     width: 100%;
     height: 100%;
     border: 0;
